--- a/3.html
+++ b/3.html
@@ -7,8 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feedback Forms</title>
     <link rel="stylesheet" href="Portfolio/3.css">
-    <script src="Portfolio/3.js"></script>
-
 </head>
 
 <body>
@@ -45,13 +43,44 @@
         </form>
     </div>
 
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-
     <script type="text/javascript">
-        emailjs.init('HWt8cmifLwCeIfywY')
+        document.getElementById('contactForm').addEventListener('submit', function (event) {
+            event.preventDefault(); // Prevent the default form submission
 
+            // Get the form values
+            var name = document.getElementById('name').value;
+            var phone = document.getElementById('phone').value;
+            var email = document.getElementById('email').value;
+            var feedback = document.getElementById('feedback').value;
+
+            // Prepare the CSV content
+            var csvContent = "Name,Phone Number,Email,Feedback\n";
+            csvContent += name + "," + phone + "," + email + "," + feedback + "\n";
+
+            // Create a blob object with the CSV content
+            var blob = new Blob([csvContent], { type: 'text/csv;charset=utf-8;' });
+
+            // Generate a temporary URL for the blob object
+            var url = URL.createObjectURL(blob);
+
+            // Create a temporary anchor element to initiate the file download
+            var link = document.createElement("a");
+            link.href = url;
+            link.setAttribute("download", "contact_form.csv");
+            link.style.visibility = 'hidden';
+
+            // Append the anchor element to the document body
+            document.body.appendChild(link);
+
+            // Initiate the file download
+            link.click();
+
+            // Clean up the temporary URL and anchor element
+            document.body.removeChild(link);
+            URL.revokeObjectURL(url);
+        });
     </script>
+
 </body>
 
 </html>
