--- a/3.html
+++ b/3.html
@@ -15,7 +15,7 @@
     <div class="top">Feedback Form</div>
 
     <div class="container">
-        <form id="contactForm">
+        <form id="contactForm" action="https://sheetdb.io/api/v1/vswa5t0w22efk" method="POST">
             <div>
                 <label for="name" class="grey">Name</label>
                 <input type="text" id="name" required class="bg">
@@ -43,44 +43,38 @@
         </form>
     </div>
 
-    <script type="text/javascript">
-        document.getElementById('contactForm').addEventListener('submit', function (event) {
-            event.preventDefault(); // Prevent the default form submission
+    <!-- <script src="3.js"></script> -->
+    <script>
+        var form = document.getElementById('contactForm');
+        var name = document.getElementById('name').value;
+        var phone = document.getElementById('phone').value;
+        var email = document.getElementById('email').value;
+        var feedback = document.getElementById('feedback').value;
 
-            // Get the form values
-            var name = document.getElementById('name').value;
-            var phone = document.getElementById('phone').value;
-            var email = document.getElementById('email').value;
-            var feedback = document.getElementById('feedback').value;
-
-            // Prepare the CSV content
-            var csvContent = "Name,Phone Number,Email,Feedback\n";
-            csvContent += name + "," + phone + "," + email + "," + feedback + "\n";
-
-            // Create a blob object with the CSV content
-            var blob = new Blob([csvContent], { type: 'text/csv;charset=utf-8;' });
-
-            // Generate a temporary URL for the blob object
-            var url = URL.createObjectURL(blob);
-
-            // Create a temporary anchor element to initiate the file download
-            var link = document.createElement("a");
-            link.href = url;
-            link.setAttribute("download", "contact_form.csv");
-            link.style.visibility = 'hidden';
-
-            // Append the anchor element to the document body
-            document.body.appendChild(link);
-
-            // Initiate the file download
-            link.click();
-
-            // Clean up the temporary URL and anchor element
-            document.body.removeChild(link);
-            URL.revokeObjectURL(url);
+        form.addEventListener('submit', function (e) {
+            e.preventDefault();
+            fetch('https://sheetdb.io/api/v1/vswa5t0w22efk', {
+                method: 'POST',
+                headers: {
+                    'Accept': 'application/json',
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    data: [
+                        {
+                            'Name': name,
+                            'Phone No.': phone,
+                            'Email': email,
+                            'Feedback': feedback
+                        }
+                    ]
+                })
+            })
+                .then((response) => response.json())
+                .then((data) => console.log(data));
         });
-    </script>
 
+    </script>
 </body>
 
 </html>
