--- a/3.html
+++ b/3.html
@@ -30,7 +30,7 @@
             </div>
             <div>
                 <label for="feedback" class="grey">Feedback</label>
-                <textarea id="feedback" required class="bg"></textarea>
+                <input type="text" id="feedback" required class="bg">
             </div>
             <div id="submit_reset">
                 <div>
@@ -43,7 +43,6 @@
         </form>
     </div>
 
-    <!-- <script src="3.js"></script> -->
     <script>
         var form = document.getElementById('contactForm');
         var name = document.getElementById('name').value;
