Clock project added

--- a/2.html
+++ b/2.html
@@ -80,8 +80,9 @@
         <table>
             <tbody>
                 <tr>
-                    <td><a href="Spotify Clone/1.html" target="_blank" class="link">Spotify Clone</td></a>
+                    <td><a href="Spotify Clone/1.html" target="_blank" class="link">Spotify Clone</a></td>
                     <td><a href="Tic Tac Toe/1.html" target="_blank" class="link">Tic Tac Toe</a></td>
+                    <td><a href="Clock/alarm.html" target="_blank" class="link">Clock</a></td>
                     <td><a href="https://www.linkedin.com/feed/update/urn:li:activity:7060875344865615872/"
                             target="_blank" class="link">Robotic Arm</a></td>
                 </tr>
