--- a/2.html
+++ b/2.html
@@ -82,10 +82,15 @@
                 <tr>
                     <td><a href="Spotify Clone/1.html" target="_blank" class="link">Spotify Clone</a></td>
                     <td><a href="Tic Tac Toe/1.html" target="_blank" class="link">Tic Tac Toe</a></td>
-                    <td><a href="CodePen Clone/1.html" target="_blank" class="link">CodePen Clone</a></td>
-                    <td><a href="Clock/alarm.html" target="_blank" class="link">Clock</a></td>
                     <td><a href="https://www.linkedin.com/feed/update/urn:li:activity:7060875344865615872/"
                             target="_blank" class="link">Robotic Arm</a></td>
+                </tr>
+                <tr>
+                    
+                    <td><a href="CodePen Clone/1.html" target="_blank" class="link">CodePen Clone</a></td>
+                    <td><a href="Clock/alarm.html" target="_blank" class="link">Clock</a></td>
+                    <td><a href="To Do List/1.html" target="_blank" class="link">To Do List</a></td>
+
                 </tr>
             </tbody>
         </table>
