--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vraj's Portfolio</title>
+    <title>Chandrabhan</title>
     <link rel="stylesheet" href="Portfolio/style.css">
 </head>
 
@@ -15,28 +15,28 @@
     <div class="top"></div>
 
     <div class="navbar">
-        <a href="1.html" target="_blank" class="link">
-            <div class="container">About Me</div>
+        <a href="about.html" target="_blank" class="link">
+            <div class="container"><span class="text">About Me</span></div>
         </a>
-        <a href="2.html" target="_blank" class="link">
-            <div class="container">Education Details</div>
+        <a href="Skills.html" target="_blank" class="link">
+            <div class="container">Skills</div>
         </a>
         <a href="3.html" target="_blank" class="link">
             <div class="container">Feedback Form</div>
         </a>
         <div class="chotacontainer">
-            <a href="https://www.linkedin.com/in/vraj-shah-6a634a254/" target="_blank" class="link">
+            <a href="https://www.linkedin.com/in/cpatel321" target="_blank" class="link">
                 <div class="container">LinkedIn</div>
             </a>
-            <a href="https://github.com/Vraj2811" target="_blank" class="link">
+            <a href="https://github.com/cpatel321" target="_blank" class="link">
                 <div class="container">Github</div>
             </a>
         </div>
     </div>
 
     <div class="bottom">
-        <div>My Portfolio 1.0.0</div>
-        <div>Learning new skills in 30 days</div>
+        <div>My Portfolio v6.9</div>
+        <div>&copy;<a href="https://vraj2811.github.io/Webverrse/">Minecraft-folio</a></div>
     </div>
 </body>
 
