Finshed updating my details

--- a/about.html
+++ b/about.html
@@ -11,28 +11,24 @@
 
 <body>
     <div class="bg-image"></div>
-
+ 
     <div class="top">
         <div>About Me</div>
     </div>
     
     <div class="left">
-        <div class="element">Save</div>
-        <div class="element">Cancel</div>
+        <button onclick='window.location.href ="index.html"'  class="element">Save</button>
+        <button onclick='window.location.href ="index.html"' class="element">Cancel</button>
     </div>
 
     <div class="right">
-        <div class="element1">I am Vraj Shah!</div>
+        <div class="element1">I am Chandrabhan Patel!</div>
         <div class="element2">
-            <p>I am a student currently pursuing my Bachelor's degree in Computer Science and Engineering at the esteemed Indian Institute of Technology Gandhinagar. Alongside my academic pursuits, I have a strong passion for quantitative finance, machine learning, and the stock market. These areas of interest fuel my drive to explore the intricate connections between computer science, finance, and data analysis.</p>
+            <p>I am a student currently pursuing my Bachelor's degree in Computer Science and Engineering at the esteemed Indian Institute of Technology Gandhinagar. Alongside my academic pursuits, I have a strong passion for machine learning and Web development. These areas of interest fuel my drive to explore the intricate connections between computer science, and data analysis.</p>
             <br>
-            <p> As a quantitative finance enthusiast, I am fascinated by the application of mathematical and statistical models to understand and predict market trends.</p>
+            <p> My enthusiasm for machine learning propels me to delve deeper into the realm of artificial intelligence, seeking innovative solutions to complex problems. </p>
             <br>
-            <p> Moreover, my enthusiasm for machine learning propels me to delve deeper into the realm of artificial intelligence, seeking innovative solutions to complex problems. </p>
-            <br>
-            <p>The world of stock markets intrigues me, as I aim to comprehend the intricacies of financial systems and develop strategies that can optimize investment decisions.</p>
-            <br>
-            <p> Through my multifaceted interests and dedication, I aspire to make meaningful contributions to the fields of computer science, finance, and machine learning.</p>
+            <p> Through my multifaceted interests and dedication, I aspire to make meaningful contributions to the fields of computer science, Artificial intelligence, and machine learning.</p>
         </div>
     </div>
 </body>
