--- a/index.html
+++ b/index.html
@@ -15,21 +15,22 @@
     <div class="top"></div>
 
     <div class="navbar">
-        <a href="about.html" target="_blank" class="link">
+        <a href="about.html" class="link">
             <div class="container"><span class="text">About Me</span></div>
         </a>
-        <a href="Skills.html" target="_blank" class="link">
-            <div class="container">Skills</div>
+        <a href="Skills.html" class="link">
+            <div class="container"><span class="text">Curriculum vitae
+            </span></div>
         </a>
-        <a href="3.html" target="_blank" class="link">
-            <div class="container">Feedback Form</div>
+        <a href="experience.html" class="link">
+            <div class="container"><span class="text">Experience</span></div>
         </a>
         <div class="chotacontainer">
             <a href="https://www.linkedin.com/in/cpatel321" target="_blank" class="link">
-                <div class="container">LinkedIn</div>
+                <div class="container"><span class="text">LinkedIn</span></div>
             </a>
             <a href="https://github.com/cpatel321" target="_blank" class="link">
-                <div class="container">Github</div>
+                <div class="container"><span class="text">Github</span></div>
             </a>
         </div>
     </div>
