--- a/experience.html
+++ b/experience.html
@@ -59,7 +59,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Periodic Table</td>
+                    <td class="clickable"><a href="https://periodictable.c1.biz" style="text-decoration: none;">Periodic Table</a></td>
                     <td>Web development</td>
                     <td>May'20 & June'23</td>
                     
