--- a/Skills.html
+++ b/Skills.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
     <link rel="stylesheet" href="Portfolio/2.css">
+    <link rel="icon" type="image/x-icon" href="Portfolio\captivate.png">
 </head>
 <body>
     <div class="bg-image"></div>    
