--- a/experience.html
+++ b/experience.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Experience</title>
     <link rel="stylesheet" href="Portfolio/exp.css">
+    <link rel="icon" type="image/x-icon" href="Portfolio\captivate.png">
 </head>
 <body>
     <div class="bg-image"></div>
