--- a/1.html
+++ b/1.html
@@ -17,7 +17,7 @@
     </div>
     
     <div class="left">
-        <div class="element">Save</div>
+        <div class="element"><a href="Vraj CV.pdf">Save</a></div>
         <div class="element">Cancel</div>
     </div>
 
