--- a/Spotify Clone/1.html
+++ b/Spotify Clone/1.html
@@ -15,7 +15,7 @@
             <li class="logo"><img src="logo.jpg">
                 <div>Music Player</div>
             </li>
-            <li> <a href="https://iitgn.ac.in/" target="_blank">Home</a> </li>
+            <li> <a href="/index.html" target="_blank">Home</a> </li>
             <li class="search"><input type="text" id="searchInput" placeholder="Search..."></li>
             <li><a href="https://www.linkedin.com/in/vraj-shah-6a634a254" target="_blank">About</a> </li>
         </ul>
