--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div class="bottom">
         <div><span style="padding-left: 15px;">My Portfolio v6.9</span></div>
-        <div>&copy;<a href="https://vraj2811.github.io/Webverrse/"><span style="padding-right: 15px;">Minecraft-folio</span></a></div>
+        <div>&copy;<a href="https://github.com/cpatel321/folio"><span style="padding-right: 15px;">Minecraft-folio</span></a></div>
     </div>
 </body>
 <script>
