--- a/2.html
+++ b/2.html
@@ -92,6 +92,9 @@
                     <td><a href="To Do List/1.html" target="_blank" class="link">To Do List</a></td>
 
                 </tr>
+                <tr>
+                    <td><a href="Blogs/index.html">ML Blogs</a></td>
+                </tr>
             </tbody>
         </table>
 
