--- a/2.html
+++ b/2.html
@@ -93,7 +93,8 @@
 
                 </tr>
                 <tr>
-                    <td><a href="Blogs/index.html">ML Blogs</a></td>
+                    <td><a href="ML_Blogs/index.html" target="_blank">ML Blogs</a></td>
+                    <td><a href="Math_Blogs/index.html" target="_blank">MATH Blogs</a></td>
                 </tr>
             </tbody>
         </table>
