--- a/2.html
+++ b/2.html
@@ -34,7 +34,7 @@
                     <td>Computer Science and Engineering</td>
                     <td>IIT Gandhinagar</td>
                     <td>2022-Present</td>
-                    <td>8.74(/10)</td>
+                    <td>8.73(/10)</td>
                 </tr>
                 <tr>
                     <td>Class XII</td>
@@ -90,11 +90,12 @@
                     <td><a href="CodePen Clone/1.html" target="_blank" class="link">CodePen Clone</a></td>
                     <td><a href="Clock/alarm.html" target="_blank" class="link">Clock</a></td>
                     <td><a href="To Do List/1.html" target="_blank" class="link">To Do List</a></td>
-
+                    
                 </tr>
                 <tr>
                     <td><a href="ML_Blogs/index.html" target="_blank">ML Blogs</a></td>
                     <td><a href="Math_Blogs/index.html" target="_blank">MATH Blogs</a></td>
+                    <td><a href="https://wedsin-intern.netlify.app/" target="_blank" class="link">Dating Website</a></td>
                 </tr>
             </tbody>
         </table>
