--- a/2.html
+++ b/2.html
@@ -94,7 +94,7 @@
                 </tr>
                 <tr>
                     <td><a href="ML_Blogs/index.html" target="_blank">ML Blogs</a></td>
-                    <td><a href="Math_Blogs/index.html" target="_blank">MATH Blogs</a></td>
+                    <td><a href="Math_Blogs/index.html" target="_blank">Math Blogs</a></td>
                     <td><a href="https://wedsin-intern.netlify.app/" target="_blank" class="link">Dating Website</a></td>
                 </tr>
             </tbody>
