--- a/1.html
+++ b/1.html
@@ -18,7 +18,7 @@
     
     <div class="left">
         <div class="element"><a href="Vraj CV.pdf">Save</a></div>
-        <div class="element">Cancel</div>
+        <div class="element"><a href="index.html">Cancel</a></div>
     </div>
 
     <div class="right">
