--- a/3.html
+++ b/3.html
@@ -15,7 +15,7 @@
     <div class="top">Feedback Form</div>
 
     <div class="container">
-        <form id="contactForm" method="POST" data-netlify="true" onSubmit="submit">
+        <form id="contactForm" method="POST" netlify onSubmit="submit">
             <div>
                 <label for="name" class="grey">Name</label>
                 <input name="name" type="text" id="name" required class="bg">
