--- a/2.html
+++ b/2.html
@@ -80,22 +80,39 @@
         <table>
             <tbody>
                 <tr>
-                    <td><a href="Spotify Clone/1.html" target="_blank" class="link">Spotify Clone</a></td>
-                    <td><a href="Tic Tac Toe/1.html" target="_blank" class="link">Tic Tac Toe</a></td>
-                    <td><a href="https://www.linkedin.com/feed/update/urn:li:activity:7060875344865615872/"
-                            target="_blank" class="link">Robotic Arm</a></td>
+                    <td class="td">
+                        <a href="Spotify Clone/1.html" target="_blank" class="link">
+                            <img src="./Portfolio/Images/img1.png">Spotify Clone</a>
+                    </td>
+                    <td class="td">
+                        <a href="Tic Tac Toe/1.html" target="_blank" class="link">
+                            <img src="./Portfolio/Images/img2.png">Tic Tac Toe</a></td>
+                    <td class="td">
+                        <a href="https://www.linkedin.com/feed/update/urn:li:activity:7060875344865615872/"
+                            target="_blank" class="link">
+                            <img src="./Portfolio/Images/img9.png"  >Robotic Arm</a></td>
                 </tr>
                 <tr>
-                    
-                    <td><a href="CodePen Clone/1.html" target="_blank" class="link">CodePen Clone</a></td>
-                    <td><a href="Clock/alarm.html" target="_blank" class="link">Clock</a></td>
-                    <td><a href="To Do List/1.html" target="_blank" class="link">To Do List</a></td>
-                    
+                    <td class="td">
+                        <a href="CodePen Clone/1.html" target="_blank" class="link">
+                            <img src="./Portfolio/Images/img8.png">CodePen Clone</a></td>
+                    <td class="td">
+                        <a href="Clock/alarm.html" target="_blank" class="link">
+                            <img src="./Portfolio/Images/img3.png">Clock</a></td>
+                    <td class="td">
+                        <a href="To Do List/1.html" target="_blank" class="link">
+                            <img src="./Portfolio/Images/img7.png">To Do List</a></td>
                 </tr>
                 <tr>
-                    <td><a href="ML_Blogs/index.html" target="_blank">ML Blogs</a></td>
-                    <td><a href="Math_Blogs/index.html" target="_blank">Math Blogs</a></td>
-                    <td><a href="https://wedsin-intern.netlify.app/" target="_blank" class="link">Dating Website</a></td>
+                    <td class="td">
+                        <a href="ML_Blogs/index.html" target="_blank" class="link">
+                            <img src="./Portfolio/Images/img4.png">ML Blogs</a></td>
+                    <td class="td">
+                        <a href="Math_Blogs/index.html" target="_blank" class="link">
+                        <img src="./Portfolio/Images/img5.png">Math Blogs</a></td>
+                    <td class="td">
+                        <a href="https://wedsin-intern.netlify.app/" target="_blank" class="link">
+                            <img src="./Portfolio/Images/img6.png">Dating Website</a></td>
                 </tr>
             </tbody>
         </table>
