--- a/2.html
+++ b/2.html
@@ -79,7 +79,7 @@
     <div class="container2">
         <table>
             <tbody>
-                <tr>
+                <tr class="projects">
                     <td class="td">
                         <a href="Spotify Clone/1.html" target="_blank" class="link">
                             <img src="./Portfolio/Images/img1.png">Spotify Clone</a>
@@ -92,7 +92,7 @@
                             target="_blank" class="link">
                             <img src="./Portfolio/Images/img9.png"  >Robotic Arm</a></td>
                 </tr>
-                <tr>
+                <tr class="projects">
                     <td class="td">
                         <a href="CodePen Clone/1.html" target="_blank" class="link">
                             <img src="./Portfolio/Images/img8.png">CodePen Clone</a></td>
@@ -103,7 +103,7 @@
                         <a href="To Do List/1.html" target="_blank" class="link">
                             <img src="./Portfolio/Images/img7.png">To Do List</a></td>
                 </tr>
-                <tr>
+                <tr class="projects">
                     <td class="td">
                         <a href="ML_Blogs/index.html" target="_blank" class="link">
                             <img src="./Portfolio/Images/img4.png">ML Blogs</a></td>
