--- a/2.html
+++ b/2.html
@@ -55,23 +55,6 @@
 
     </div>
 
-    <div class="top2">
-        <div>RELEVENT COURSES</div>
-    </div>
-
-    <div class="container1">
-        <table>
-            <tbody>
-                <tr>
-                    <td>Machine Learning (Ongoing)</td>
-                    <td>Data-Centric-Computing</td>
-                    <td>Probability, Statistics and Data Visualization</td>
-                </tr>
-            </tbody>
-        </table>
-
-    </div>
-
     <div class="top3">
         <div>PROJECTS</div>
     </div>
@@ -81,16 +64,14 @@
             <tbody>
                 <tr class="projects">
                     <td class="td">
-                        <a href="Spotify Clone/1.html" target="_blank" class="link">
-                            <img src="./Portfolio/Images/img1.png">Spotify Clone</a>
-                    </td>
+                        <a href="https://interiit.in/" target="_blank" class="link">
+                            <img src="./Portfolio/Images/img10.png">Inter IIT Website</a></td>
                     <td class="td">
-                        <a href="Tic Tac Toe/1.html" target="_blank" class="link">
-                            <img src="./Portfolio/Images/img2.png">Tic Tac Toe</a></td>
+                        <a href="https://ncrtdh.in/" target="_blank" class="link">
+                        <img src="./Portfolio/Images/img11.png">N-CRTDH Website</a></td>
                     <td class="td">
-                        <a href="https://www.linkedin.com/feed/update/urn:li:activity:7060875344865615872/"
-                            target="_blank" class="link">
-                            <img src="./Portfolio/Images/img9.png"  >Robotic Arm</a></td>
+                        <a href="https://amalthea.iitgn.ac.in/" target="_blank" class="link">
+                            <img src="./Portfolio/Images/img12.png">IITGN Tech <br>Summit Website</a></td>
                 </tr>
                 <tr class="projects">
                     <td class="td">
@@ -105,14 +86,27 @@
                 </tr>
                 <tr class="projects">
                     <td class="td">
-                        <a href="ML_Blogs/index.html" target="_blank" class="link">
-                            <img src="./Portfolio/Images/img4.png">ML Blogs</a></td>
+                        <a href="Spotify Clone/1.html" target="_blank" class="link">
+                            <img src="./Portfolio/Images/img1.png">Spotify Clone</a>
+                    </td>
                     <td class="td">
                         <a href="Math_Blogs/index.html" target="_blank" class="link">
                         <img src="./Portfolio/Images/img5.png">Math Blogs</a></td>
                     <td class="td">
                         <a href="https://wedsin-intern.netlify.app/" target="_blank" class="link">
                             <img src="./Portfolio/Images/img6.png">Dating Website</a></td>
+                </tr>
+                <tr class="projects">
+                    <td class="td">
+                        <a href="ML_Blogs/index.html" target="_blank" class="link">
+                            <img src="./Portfolio/Images/img4.png">ML Blogs</a></td>
+                    <td class="td">
+                        <a href="Tic Tac Toe/1.html" target="_blank" class="link">
+                            <img src="./Portfolio/Images/img2.png">Tic Tac Toe</a></td>
+                    <td class="td">
+                        <a href="https://www.linkedin.com/feed/update/urn:li:activity:7060875344865615872/"
+                            target="_blank" class="link">
+                            <img src="./Portfolio/Images/img9.png"  >Robotic Arm</a></td>
                 </tr>
             </tbody>
         </table>
